# Pandrift

./: CMakeLists.txt  LICENSE  README.markdown  example.cc  pandrift-distortion-chroma-f.glsl  pandrift-distortion-v.glsl  pandrift_display_manager.cc  pandrift_display_manager.hh  pandrift_rift_manager.cc  pandrift_rift_manager.hh  world.cc  world.hh
example/: CMakeLists.txt  example.cc  world.cc
src/: CMakeLists.txt  pandrift-distortion-f.glsl  pandrift.cc  pandrift.hh  pandrift_display_manager.cc  pandrift_display_manager.hh  pandrift_rift_manager.cc  pandrift_rift_manager.hh
